# Lip_reading_Demo_using_CV

./: LipNet.ipynb  README.md  main.py  pyproject.toml  setup_weights.py
app/: streamlitapp.py  uninstall.txt  utils.py
src/: __init__.py  decoder.py  display.py  face_detector.py  inference_engine.py  lip_extractor.py  model.py  preprocessor.py  video_capture.py
tests/: test_pipeline.py
weights/: vocabulary.json
