[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "silent-speech"
version = "0.1.0"
description = "Vision-Based Silent Speech Recognition for Nonverbal Communication"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "opencv-python>=4.8.0",
    "mediapipe>=0.10.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "scipy>=1.11.0",
    "tqdm>=4.66.0",
    "requests>=2.31.0",
    "einops>=0.7.0",
    "timm>=0.9.0",
    "av>=11.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]